The active state of collection Incorrect #83027

Closed
opened 2020-11-26 04:22:24 +01:00 by Leroy · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: 2.83.9, 2.90.1

Short description of error

When toggling the hidden collections through the number key shortcuts ({key 1}, {key 2}, ...) the Collection 2 always remains greyed out, even when visible.

If you click used your mouse on eye icon, it works fine.

Sometimes it's all in active or gray. It seems to happen only when using shortcut keys.

fJawtcnAqw.mp4

Exact steps for others to reproduce the error

  • Open the attached file
  • Use the number keys to toggle collection visibility and look at the outliner
    outline.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: 2.83.9, 2.90.1 **Short description of error** When toggling the hidden collections through the number key shortcuts ({key 1}, {key 2}, ...) the *Collection 2* always remains greyed out, even when visible. If you click used your mouse on eye icon, it works fine. Sometimes it's all in active or gray. It seems to happen only when using shortcut keys. [fJawtcnAqw.mp4](https://archive.blender.org/developer/F9377013/fJawtcnAqw.mp4) **Exact steps for others to reproduce the error** - Open the attached file - Use the number keys to toggle collection visibility and look at the outliner [outline.blend](https://archive.blender.org/developer/F9377016/outline.blend)
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

#83382 was marked as duplicate of this issue

#83382 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Dalkoom

Added subscriber: @Dalkoom

This issue was referenced by 34580748dc

This issue was referenced by 34580748dcf0a3656dd634fc90cb00ec27367376
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-02-19 20:57:13 +01:00
Author

@HooglyBoogly Still have problem in blender 2.92 release, so it's moved in 2.93?

@HooglyBoogly Still have problem in blender 2.92 release, so it's moved in 2.93?
Member

In #83027#1121067, @Leroy-Xie wrote:
@HooglyBoogly Still have problem in blender 2.92 release, so it's moved in 2.93?

Right, the fix is committed to 2.93. At the time the patch was committed it was a bit late to commit it to 2.92.

> In #83027#1121067, @Leroy-Xie wrote: > @HooglyBoogly Still have problem in blender 2.92 release, so it's moved in 2.93? Right, the fix is committed to 2.93. At the time the patch was committed it was a bit late to commit it to 2.92.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83027
No description provided.